jEdit 5.0 version history
       (changes since jEdit 4.5)
:encoding=UTF-8:maxLineLen=80:wrap=hard:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust,
Dale Anson, Matthieu Casanova, Jimmy Chaw and Jarek Czekalski for contributing to
this release.

{{{ Bug fixes
- Fixed Ctrl + key not working in completion popup (Matthieu Casanova)

- Large file mode text description dialog (#3456370 - Matthieu Casanova)

- Fixed Copy_Line macro that was copying one character of the next line 
  (#3454377 - Matthieu Casanova)

- Fixed copy of Hypersearch results adding \r in the clipboard (#3142456)
  (Matthieu Casanova)

- The Java based installer now correctly handles GNU style long filenames in
  the installer package and thus does not corrupt the JavaDoc files anymore
  (Bug #2327520 - Björn "Vampire" Kautler)

- Added select all and select none buttons to PingPongList fixing a bug in
  EncodingsOptionPane (#3434850 - Matthieu Casanova)

- Several message boxes were not being created on the EDT which would result in
  tiny, non-resizable message boxes. (Bug #3441535, Dale Anson)

- \r (0x0A, CR) could be pasted from clipboard into buffer.
  (Bug #3142456 - Matthieu Casanova)

}}}
{{{ API Changes

- TextUtilities.join() now accept Collection<?> instead of Collection<String>
  (Matthieu Casanova)

- OperatingSystem.isOS2() method is removed since OS/2 cannot run jEdit since
  many years (Matthieu Casanova)

- OperatingSystem.isDOSDerived() is now deprecated since OS/2 do not exists
  anymore Windows is the only DOS derived OS, so use OperatingSystem.isWindows()
  instead (Matthieu Casanova)

}}}
{{{ Editing
- Added some missing keywords to vrml2 edit mode (patch #3471586) (Jimmy Chaw)

- Using no highlight or limited syntax highlight in large buffers now also
  disables soft wrap (Matthieu Casanova)

- Using no highlight or limited syntax highlight in large buffers now disables
  highlight of very long lines (Matthieu Casanova)
